// file: proto/gcommon/v1/database/cache_service.proto
// version: 1.0.1
// guid: 3f067d2a-5942-4a2c-adcf-14b8ac93813b
edition = "2023";

package database.v1;

import "database/v1/clear_request.proto";
import "database/v1/clear_response.proto";
import "database/v1/decrement_request.proto";
import "database/v1/decrement_response.proto";
import "database/v1/delete_multiple_request.proto";
import "database/v1/delete_multiple_response.proto";
import "database/v1/delete_request.proto";
import "database/v1/delete_response.proto";
import "database/v1/exists_request.proto";
import "database/v1/exists_response.proto";
import "database/v1/flush_request.proto";
import "database/v1/flush_response.proto";
import "database/v1/get_multiple_request.proto";
import "database/v1/get_multiple_response.proto";
import "database/v1/get_request.proto";
import "database/v1/get_response.proto";
import "database/v1/get_stats_request.proto";
import "database/v1/get_stats_response.proto";
import "database/v1/increment_request.proto";
import "database/v1/increment_response.proto";
import "database/v1/keys_request.proto";
import "database/v1/keys_response.proto";
import "database/v1/set_multiple_request.proto";
import "database/v1/set_multiple_response.proto";
import "database/v1/set_request.proto";
import "database/v1/set_response.proto";
import "database/v1/touch_expiration_request.proto";
import "database/v1/touch_expiration_response.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/database/";

/**
 * CacheService provides comprehensive caching capabilities.
 * Supports CRUD operations, batch operations, atomic operations,
 * and cache management with flexible expiration policies.
 */
service CacheService {
  // Get retrieves a value from the cache by key
  rpc Get(GetRequest) returns (GetResponse);

  // Set stores a value in the cache with optional expiration
  rpc Set(SetRequest) returns (SetResponse);

  // Delete removes a value from the cache
  rpc Delete(CacheDeleteRequest) returns (CacheDeleteResponse);

  // Exists checks if a key exists in the cache
  rpc Exists(ExistsRequest) returns (ExistsResponse);

  // GetMultiple retrieves multiple values from the cache in a single operation
  rpc GetMultiple(GetMultipleRequest) returns (GetMultipleResponse);

  // SetMultiple stores multiple values in the cache atomically
  rpc SetMultiple(SetMultipleRequest) returns (SetMultipleResponse);

  // DeleteMultiple removes multiple values from the cache atomically
  rpc DeleteMultiple(DeleteMultipleRequest) returns (DeleteMultipleResponse);

  // Increment atomically increments a numeric value
  rpc Increment(IncrementRequest) returns (IncrementResponse);

  // Decrement atomically decrements a numeric value
  rpc Decrement(DecrementRequest) returns (DecrementResponse);

  // Clear removes all entries from the cache or by pattern
  rpc Clear(ClearRequest) returns (ClearResponse);

  // Keys returns all keys matching a pattern
  rpc Keys(KeysRequest) returns (KeysResponse);

  // GetStats returns cache statistics and performance metrics
  rpc GetStats(CacheGetStatsRequest) returns (CacheGetStatsResponse);

  // Flush forces cache persistence if supported by the backend
  rpc Flush(FlushRequest) returns (FlushResponse);

  // TouchExpiration updates the expiration time of an existing key
  rpc TouchExpiration(TouchExpirationRequest) returns (TouchExpirationResponse);
}
