// file: pkg/queue/proto/delete_subscription_request.proto
// version: 1.0.0
// Request to delete a subscription

edition = "2023";

package gcommon.v1.queue;


// Request to delete a subscription
message DeleteSubscriptionRequest {
  // Subscription ID to delete
  string subscription_id = 1;

  // Force deletion even if active
  bool force = 2;

  // Timeout for the operation (milliseconds)
  int32 timeout_ms = 3;
}
